--- a/MyPetShop/Views/Pet/ListCartItem.cshtml
+++ b/MyPetShop/Views/Pet/ListCartItem.cshtml
@@ -1,7 +1,85 @@
-﻿
+﻿@using MyPetShop.Models
 @{
-    ViewBag.Title = "ListCartItem";
+    Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2>ListCartItem</h2>
+<style>
+    .cartimg {
+        width: 200px;
+    }
+</style>
 
+<div class="row">
+    <div class="span9">
+        <h4 class="title"><span class="text"><strong>Your</strong> Cart</span></h4>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Remove</th>
+                <th>Image</th>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Unit Price</th>
+                <th>Total</th>
+            </tr>
+            </thead>
+            <tbody>
+            @{
+                double total = 0;
+                var list = (List<CartItem>) Session["ShoppingCart"];
+            }
+            @if (list != null)
+            {               
+                foreach (var item in list)
+                {
+                    total += (item.Quantity * item.Pet.Price);
+                    <tr>
+                        <td><input type="checkbox" value="option1"></td>
+                        <td><a href="@Url.Action("PetDetails", "Pet", new { id = item.Pet.Id} )"><img class="cartimg" alt="" src="@item.Image"></a></td>
+                        <td>@item.Pet.Name</td>
+                        <td><input type="text" placeholder="@item.Quantity" class="input-mini"></td>
+                        <td>$ @item.Pet.Price</td>
+                        <td>$ @(item.Quantity * item.Pet.Price)</td>
+                    </tr>
+                }
+            }           
+            <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td><strong>$ @total</strong></td>
+            </tr>
+            </tbody>
+        </table>
+
+        <p class="buttons center">
+            <button class="btn" type="button">Update</button>
+            <button class="btn" type="button">Continue</button>
+            <button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
+        </p>
+    </div>
+    
+    
+    <!--menu in the right of the page-->
+    <div class="span3 col">
+        <div class="block">
+            @{ Html.RenderAction("ListCategory", "Pet"); }
+            <br />
+        </div>
+        <div class="block">
+            <h4 class="title">
+                <span class="pull-left"><span class="text">Other Products</span></span>
+                <span class="pull-right">
+                    <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
+                </span>
+            </h4>
+            <div id="myCarousel" class="carousel slide">
+                @{ Html.RenderAction("ListOtherProducts", "Pet", new { id = 0 }); }
+            </div>
+        </div>
+    </div>
+    <!--end menu-->
+
+</div>
