--- a/MyPetShop/Views/Pet/Products.cshtml
+++ b/MyPetShop/Views/Pet/Products.cshtml
@@ -61,18 +61,18 @@
         </div>
         <div class="span3 col">
             <div class="block">
-                @Html.Action("ListCategory", "Pet")
+                @{ Html.RenderAction("ListCategory", "Pet"); }
                 <br />
             </div>
             <div class="block">
                 <h4 class="title">
-                    <span class="pull-left"><span class="text">Other Products</span></span>
+                    <span class="pull-left"><span class="text">Random Pets</span></span>
                     <span class="pull-right">
                         <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
                     </span>
                 </h4>
                 <div id="myCarousel" class="carousel slide">
-                    @Html.Action("ListOtherProducts", "Pet")
+                    @{ Html.RenderAction("ListOtherProducts", "Pet", new { id = 0 }); }
                 </div>
             </div>
         </div>
