--- a/MyPetShop/Views/Pet/ShoppingCartPartial.cshtml
+++ b/MyPetShop/Views/Pet/ShoppingCartPartial.cshtml
@@ -1,3 +1,3 @@
 ﻿
-    <a href="#" onclick="window.open('/Pet/ListCartItem', '_self')">Your Cart <span class="badge" id="Cart_Amount">@Model</span></a>
+    <a href="@Url.Action("ListCartItem","Pet")">Your Cart <span class="badge" id="Cart_Amount">@Model</span></a>
 
