--- a/MyPetShop/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/MyPetShop/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -76,7 +76,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="@Url.Action("Map","Admin")">
                             <i class="pe-7s-map-marker"></i>
                             <p>Bản Đồ Cửa Hàng</p>
                         </a>
@@ -85,12 +85,6 @@
                         <a href="">
                             <i class="pe-7s-bell"></i>
                             <p>Thông Báo</p>
-                        </a>
-                    </li>
-                    <li class="active-pro">
-                        <a href="">
-                            <i class="pe-7s-rocket"></i>
-                            <p>Exit</p>
                         </a>
                     </li>
                 </ul>
@@ -106,7 +100,6 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Trang Admin</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left">
@@ -184,23 +177,8 @@
                     <nav class="pull-left">
                         <ul>
                             <li>
-                                <a href="dashboard.html">
-                                    Trang Chủ
-                                </a>
-                            </li>
-                            <li>
                                 <a href="" target="_blank">
                                     FanPage: Animal Zone
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Cập Nhật
-                                </a>
-                            </li>
-                            <li>
-                                <a href="../index.html" target="_blank">
-                                    Web: Trang Chủ Web
                                 </a>
                             </li>
                         </ul>
