--- a/MyPetShop/Views/Pet/ListCartItem.cshtml
+++ b/MyPetShop/Views/Pet/ListCartItem.cshtml
@@ -59,7 +59,7 @@
 
         <p class="buttons center">
             <a type="button" class="btn" href="@Url.Action("Index", "Pet")">Continue</a>
-            <a type="button" class="btn btn-inverse" href="#">Checkout</a>
+            <a type="button" class="btn btn-inverse" href="@Url.Action("PlaceOrder", "CheckOut")">Checkout</a>
         </p>
     </div>
     
