--- a/MyPetShop/Views/Shared/_LayoutUser.cshtml
+++ b/MyPetShop/Views/Shared/_LayoutUser.cshtml
@@ -55,8 +55,7 @@
             <a href="@Url.Action("Index","Home")" class="logo pull-left"><img src="~/Images/logo.png" class="site_logo" alt=""></a>
             <nav id="menu" class="pull-right">
                 <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="@Url.Action("About", "Pet")">About</a></li>
                 </ul>
             </nav>
             <!--show Category-->
@@ -97,20 +96,14 @@
             <div class="span3">
                 <h4>Navigation</h4>
                 <ul class="nav">
-                    <li><a href="./index.html">Homepage</a></li>
-                    <li><a href="./about.html">About Us</a></li>
-                    <li><a href="./contact.html">Contac Us</a></li>
-                    <li><a href="./cart.html">Your Cart</a></li>
-                    <li><a href="./register.html">Login</a></li>
+                    <li><a href="@Url.Action("Index", "Pet")">Homepage</a></li>
+                    <li><a href="@Url.Action("About","Pet")">About Us</a></li>
                 </ul>
             </div>
             <div class="span4">
                 <h4>My Account</h4>
                 <ul class="nav">
-                    <li><a href="#">My Account</a></li>
-                    <li><a href="#">Order History</a></li>
-                    <li><a href="#">Wish List</a></li>
-                    <li><a href="#">Newsletter</a></li>
+                    <li><a href="@Url.Action("ListCartItem","Pet")">My cart</a></li>
                 </ul>
             </div>
             <div class="span5">
